Automatice creation of tables via persistence layer